added folder skeleton for react-redux

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>React example</title>
-	<link rel="stylesheet" href="">
-
+	<title>react-with-redux</title>
 </head>
 <body>
 	<div id="app-root"></div>
+	<script src="bundle.js"></script>
 </body>
-<script src="bundle.js"></script>
 </html>
